Better defaults for View. Fixes to CSS to repair bad overflow on half carousel.

--- a/jcarousel/skins/grunge/jcarousel-grunge.css
+++ b/jcarousel/skins/grunge/jcarousel-grunge.css
@@ -60,13 +60,12 @@ body.front .jcarousel-skin-Grunge .jcarousel-clip-horizontal {
 
 .jcarousel-skin-Grunge .jcarousel-item {
   padding: 0;
-  width: 920px;
-  height: 270px;
+  height: 290px;
   overflow: hidden;
   list-style: none;
   position : relative;
   z-index : 0;
-  padding-top : 20px;
+  padding-top : 0px;
   padding-right : 20px;
 }
 
@@ -181,6 +180,7 @@ body.front .jcarousel-skin-Grunge .jcarousel-item {
 }
 .jcarousel-skin-Grunge ul.jcarousel-navigation {
   position : absolute;
+  top : 0;
   z-index : 2;
   width : 100%;
   text-align : center;
